--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
 html,body,#root{
   height: 100%;
   width: 100%;
-  background-color: #3d3e5b;
+  background-color: #656691;
 }
 main{
   height: 100%;
